# QTGol

./: .coveragerc  .gitignore  README.md  pyproject.toml
src/qtgol/: app.py
tests/: test_qtgol.py
