[tool.poetry]
name = "QTGol"
version = "0.1.0"
description = ""
authors = ["Sorrowwill <ssorrowwill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
