[tool.poetry]
name = "QTGol"
version = "0.1.0"
description = ""
authors = ["Sorrowwill <ssorrowwill@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.4"
flake8 = "^5.0.4"
mypy = "^0.971"
bandit = "^1.7.4"
black = "^22.6.0"
pytest-qt = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
